// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaPlayer /> shapshots should render with autoplay if prop is set to true 1`] = `
<div
  className="mediaPlayer "
  style={undefined}
>
  <video
    autoPlay={true}
    className="videoElement"
    controls={undefined}
    controlsList="nodownload"
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlaying={[Function]}
    playsInline={true}
    src="mySrc"
  />
  <div
    className="loadingBox"
  >
    Loading...
  </div>
</div>
`;

exports[`<MediaPlayer /> shapshots should render with controls if prop is set to true 1`] = `
<div
  className="mediaPlayer "
  style={undefined}
>
  <video
    autoPlay={undefined}
    className="videoElement"
    controls={false}
    controlsList="nodownload"
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlaying={[Function]}
    playsInline={true}
    src="mySrc"
  />
  <div
    className="loadingBox"
  >
    Loading...
  </div>
</div>
`;

exports[`<MediaPlayer /> shapshots should render with the given className 1`] = `
<div
  className="mediaPlayer myClass"
  style={undefined}
>
  <video
    autoPlay={undefined}
    className="videoElement"
    controls={undefined}
    controlsList="nodownload"
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlaying={[Function]}
    playsInline={true}
    src="mySrc"
  />
  <div
    className="loadingBox"
  >
    Loading...
  </div>
</div>
`;

exports[`<MediaPlayer /> shapshots should render with the given src 1`] = `
<div
  className="mediaPlayer "
  style={undefined}
>
  <video
    autoPlay={undefined}
    className="videoElement"
    controls={undefined}
    controlsList="nodownload"
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlaying={[Function]}
    playsInline={true}
    src="mySrc"
  />
  <div
    className="loadingBox"
  >
    Loading...
  </div>
</div>
`;

exports[`<MediaPlayer /> shapshots should render with the given style 1`] = `
<div
  className="mediaPlayer "
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
>
  <video
    autoPlay={undefined}
    className="videoElement"
    controls={undefined}
    controlsList="nodownload"
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlaying={[Function]}
    playsInline={true}
    src="mySrc"
  />
  <div
    className="loadingBox"
  >
    Loading...
  </div>
</div>
`;
